<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
   <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

   <TextView
       android:id="@+id/welcomeText"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginLeft="10dip"
       android:layout_marginRight="10dip"
       android:text="@string/welcome"
       android:textAppearance="?android:attr/textAppearanceLarge" />

   <TextView
       android:id="@+id/todaysText"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       
       android:gravity="center"
       android:layout_marginTop="30dip"
       android:layout_marginLeft="10dip"
       android:layout_marginRight="10dip"
       android:text="@string/todays"
       android:textAppearance="?android:attr/textAppearanceMedium" />

   <TextView
       android:id="@+id/dateText"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginLeft="10dip"
       android:layout_marginRight="10dip"
       android:gravity="center"
       android:text="@string/date"
       android:textAppearance="?android:attr/textAppearanceMedium" />
   
      <TextView
       android:id="@+id/scheduleAM"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:lines="1"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="10dip"
       android:layout_marginRight="10dip"
       android:background="#FFFFCC"
       android:text="AM"
      android:textAppearance="?android:attr/textAppearanceMedium" />
   <TextView
       android:id="@+id/scheduleTextAM"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:lines="5"
    android:paddingLeft="20dip"
        android:layout_marginLeft="10dip"
       android:layout_marginRight="10dip"
       android:background="#FFFFCC"
       android:text="@string/textAM" />
   <TextView
       android:id="@+id/schedulePM"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:lines="1"
        android:layout_marginLeft="10dip"
       android:layout_marginRight="10dip"
       android:background="#FFFFCC"
       android:text="PM"
      android:textAppearance="?android:attr/textAppearanceMedium" />
     <TextView
       android:id="@+id/scheduleTextPM"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:lines="5"
   android:paddingLeft="20dip"
        android:layout_marginLeft="10dip"
       android:layout_marginRight="10dip"
       android:background="#FFFFCC"
      android:text="@string/textPM"  />
</LinearLayout>
